Bug 363339 - plasmashell crashing after login
Summary: plasmashell crashing after login
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: 5.5.5
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-05-20 18:53 UTC by Marlon Rodriguez
Modified: 2016-08-11 15:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marlon Rodriguez 2016-05-20 18:53:46 UTC
Application: plasmashell (5.5.5)

Qt Version: 5.5.1
Operating System: Linux 4.4.0-22-generic x86_64
Distribution: Ubuntu 16.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:
Logged in, closed bug reports, restarted plasmashell.  Same crash.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f9f7a6668c0 (LWP 3166))]

Thread 8 (Thread 0x7f9f65989700 (LWP 3169)):
#0  0x00007f9f74d77e8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f9f78e3cc62 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f9f78e3e8d7 in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f9f67ad7629 in QXcbEventReader::run (this=0xa2a4d0) at qxcbconnection.cpp:1253
#4  0x00007f9f7546d84e in QThreadPrivate::start (arg=0xa2a4d0) at thread/qthread_unix.cpp:331
#5  0x00007f9f7455a6fa in start_thread (arg=0x7f9f65989700) at pthread_create.c:333
#6  0x00007f9f74d83b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f9f5efc9700 (LWP 3171)):
#0  0x00007f9f71b52a64 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f9f71b0d31e in g_main_context_acquire () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9f71b0e1d5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f9f71b0e42c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f9f756a4a9b in QEventDispatcherGlib::processEvents (this=0x7f9f580008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007f9f7564bdea in QEventLoop::exec (this=this@entry=0x7f9f5efc8ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f9f754688a4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007f9f77d103c5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007f9f7546d84e in QThreadPrivate::start (arg=0xaf99f0) at thread/qthread_unix.cpp:331
#9  0x00007f9f7455a6fa in start_thread (arg=0x7f9f5efc9700) at pthread_create.c:333
#10 0x00007f9f74d83b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f9f54782700 (LWP 3173)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f9f5c725213 in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#2  0x00007f9f5c724937 in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#3  0x00007f9f7455a6fa in start_thread (arg=0x7f9f54782700) at pthread_create.c:333
#4  0x00007f9f74d83b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f9f4fe77700 (LWP 3174)):
#0  0x00007f9f71b52a64 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f9f71b0dd49 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9f71b0e2c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f9f71b0e42c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f9f756a4a9b in QEventDispatcherGlib::processEvents (this=0x7f9f480008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007f9f7564bdea in QEventLoop::exec (this=this@entry=0x7f9f4fe76ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f9f754688a4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007f9f77d103c5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#8  0x00007f9f7546d84e in QThreadPrivate::start (arg=0xd9eb50) at thread/qthread_unix.cpp:331
#9  0x00007f9f7455a6fa in start_thread (arg=0x7f9f4fe77700) at pthread_create.c:333
#10 0x00007f9f74d83b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f9f4de2a700 (LWP 3175)):
#0  0x00007f9f71b52a64 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f9f71b0e436 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9f756a4a9b in QEventDispatcherGlib::processEvents (this=0x7f9f400008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#3  0x00007f9f7564bdea in QEventLoop::exec (this=this@entry=0x7f9f4de29ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#4  0x00007f9f754688a4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#5  0x00007f9f77d103c5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#6  0x00007f9f7546d84e in QThreadPrivate::start (arg=0xe22040) at thread/qthread_unix.cpp:331
#7  0x00007f9f7455a6fa in start_thread (arg=0x7f9f4de2a700) at pthread_create.c:333
#8  0x00007f9f74d83b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f9f47fff700 (LWP 3176)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f9f7a0b5bd4 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#2  0x00007f9f7a0b5c19 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Script.so.5
#3  0x00007f9f7455a6fa in start_thread (arg=0x7f9f47fff700) at pthread_create.c:333
#4  0x00007f9f74d83b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f9f449db700 (LWP 3177)):
#0  0x00007f9f74d739cd in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f9f71b516c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9f71b0de04 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f9f71b0e2c0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f9f71b0e42c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f9f756a4a9b in QEventDispatcherGlib::processEvents (this=0x7f9ebc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#6  0x00007f9f7564bdea in QEventLoop::exec (this=this@entry=0x7f9f449dac90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#7  0x00007f9f754688a4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#8  0x00007f9f78696ed6 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#9  0x00007f9f7546d84e in QThreadPrivate::start (arg=0x13dc4a0) at thread/qthread_unix.cpp:331
#10 0x00007f9f7455a6fa in start_thread (arg=0x7f9f449db700) at pthread_create.c:333
#11 0x00007f9f74d83b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f9f7a6668c0 (LWP 3166)):
[KCrash Handler]
#6  KServiceGroup::entries (this=0x0, sort=sort@entry=true, excludeNoDisplay=excludeNoDisplay@entry=true, allowSeparators=allowSeparators@entry=true, sortByGenericName=false) at ../../src/services/kservicegroup.cpp:345
#7  0x00007f9eba8e0085 in AppsModel::refreshInternal (this=this@entry=0x1dc3030) at /build/plasma-desktop-Bvo2Ad/plasma-desktop-5.5.5/applets/kicker/plugin/appsmodel.cpp:394
#8  0x00007f9eba8e0548 in AppsModel::refreshInternal (this=0x1dc3030) at /build/plasma-desktop-Bvo2Ad/plasma-desktop-5.5.5/applets/kicker/plugin/appsmodel.cpp:370
#9  AppsModel::refresh (this=0x1dc3030) at /build/plasma-desktop-Bvo2Ad/plasma-desktop-5.5.5/applets/kicker/plugin/appsmodel.cpp:360
#10 0x00007f9eba8dd197 in AppsModel::setAppletInterface (this=this@entry=0x1dc3030, appletInterface=<optimized out>) at /build/plasma-desktop-Bvo2Ad/plasma-desktop-5.5.5/applets/kicker/plugin/appsmodel.cpp:337
#11 0x00007f9eba8ffe7f in AppsModel::qt_static_metacall (_o=_o@entry=0x1dc3030, _c=_c@entry=QMetaObject::WriteProperty, _id=_id@entry=3, _a=_a@entry=0x7ffceebfc5b0) at /build/plasma-desktop-Bvo2Ad/plasma-desktop-5.5.5/obj-x86_64-linux-gnu/applets/kicker/moc_appsmodel.cpp:223
#12 0x00007f9eba901dbb in AppsModel::qt_metacall (this=0x1dc3030, _c=QMetaObject::WriteProperty, _id=3, _a=0x7ffceebfc5b0) at /build/plasma-desktop-Bvo2Ad/plasma-desktop-5.5.5/obj-x86_64-linux-gnu/applets/kicker/moc_appsmodel.cpp:267
#13 0x00007f9f77c8c5b0 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#14 0x00007f9f77c8e0cb in QQmlPropertyPrivate::writeValueProperty(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#15 0x00007f9f77c8eb1c in QQmlPropertyPrivate::writeBinding(QObject*, QQmlPropertyData const&, QQmlContextData*, QQmlJavaScriptExpression*, QV4::Value const&, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#16 0x00007f9f77cfc8cf in QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#17 0x00007f9f77d05e06 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#18 0x00007f9f77c94c82 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#19 0x00007f9f77c95924 in QQmlIncubationController::incubateFor(int) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#20 0x00007f9f7897b7ac in KDeclarative::QmlObjectIncubationController::incubate (this=0xf3da40) at ../../../src/kdeclarative/private/qmlobject_p.h:63
#21 KDeclarative::QmlObjectIncubationController::incubatingObjectCountChanged (this=0xf3da40, count=1) at ../../../src/kdeclarative/private/qmlobject_p.h:79
#22 0x00007f9f77c95739 in QQmlEnginePrivate::incubate(QQmlIncubator&, QQmlContextData*) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#23 0x00007f9f77c90eac in QQmlComponent::create(QQmlIncubator&, QQmlContext*, QQmlContext*) () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#24 0x00007f9f78978395 in KDeclarative::QmlObject::completeInitialization (this=0xf44700, initialProperties=...) at ../../../src/kdeclarative/qmlobject.cpp:318
#25 0x00007f9f7a1dfaca in PlasmaQuick::AppletQuickItem::init (this=this@entry=0xf45cf0) at ../../../src/plasmaquick/appletquickitem.cpp:542
#26 0x00007f9f4de3fbac in AppletInterface::init (this=0xf45cf0) at ../../../../src/scriptengines/qml/plasmoid/appletinterface.cpp:169
#27 0x00007f9f7a1e0aa8 in PlasmaQuick::AppletQuickItem::itemChange (this=0xf45cf0, change=QQuickItem::ItemSceneChange, value=...) at ../../../src/plasmaquick/appletquickitem.cpp:752
#28 0x00007f9f7872732e in QQuickItemPrivate::refWindow(QQuickWindow*) () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#29 0x00007f9f787272d4 in QQuickItemPrivate::refWindow(QQuickWindow*) () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#30 0x00007f9f7872a0b4 in QQuickItem::setParentItem(QQuickItem*) () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#31 0x00007f9f7a1edf18 in PlasmaQuick::ContainmentViewPrivate::setContainment (this=0x1d832d0, cont=<optimized out>) at ../../../src/plasmaquick/containmentview.cpp:124
#32 0x00007f9f7a1ee639 in PlasmaQuick::ContainmentView::setContainment (this=this@entry=0x1dac760, cont=<optimized out>) at ../../../src/plasmaquick/containmentview.cpp:246
#33 0x0000000000453f73 in ShellCorona::createWaitingPanels (this=0xadd090) at /build/plasma-workspace-kxRFE_/plasma-workspace-5.5.5.2/shell/shellcorona.cpp:1027
#34 0x00007f9f7567ce4f in QtPrivate::QSlotObjectBase::call (a=0x7ffceebfd200, r=0xadd090, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#35 QMetaObject::activate (sender=sender@entry=0xadd140, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3698
#36 0x00007f9f7567d7d7 in QMetaObject::activate (sender=sender@entry=0xadd140, m=m@entry=0x7f9f75897840 <QTimer::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3578
#37 0x00007f9f756fc6d0 in QTimer::timeout (this=this@entry=0xadd140) at .moc/moc_qtimer.cpp:197
#38 0x00007f9f75689878 in QTimer::timerEvent (this=0xadd140, e=<optimized out>) at kernel/qtimer.cpp:247
#39 0x00007f9f7567de53 in QObject::event (this=0xadd140, e=<optimized out>) at kernel/qobject.cpp:1261
#40 0x00007f9f7615105c in QApplicationPrivate::notify_helper (this=this@entry=0xa0a690, receiver=receiver@entry=0xadd140, e=e@entry=0x7ffceebfd530) at kernel/qapplication.cpp:3716
#41 0x00007f9f76156516 in QApplication::notify (this=0x7ffceebfd8d0, receiver=0xadd140, e=0x7ffceebfd530) at kernel/qapplication.cpp:3499
#42 0x00007f9f7564e62b in QCoreApplication::notifyInternal (this=0x7ffceebfd8d0, receiver=0xadd140, event=event@entry=0x7ffceebfd530) at kernel/qcoreapplication.cpp:965
#43 0x00007f9f756a389d in QCoreApplication::sendEvent (event=0x7ffceebfd530, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:224
#44 QTimerInfoList::activateTimers (this=0xa5cc60) at kernel/qtimerinfo_unix.cpp:637
#45 0x00007f9f756a3da1 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:177
#46 0x00007f9f71b0e127 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#47 0x00007f9f71b0e380 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#48 0x00007f9f71b0e42c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#49 0x00007f9f756a4a7f in QEventDispatcherGlib::processEvents (this=0xa54100, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#50 0x00007f9f7564bdea in QEventLoop::exec (this=this@entry=0x7ffceebfd770, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#51 0x00007f9f75653e8c in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1229
#52 0x00007f9f75987c3c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1542
#53 0x00007f9f7614d495 in QApplication::exec () at kernel/qapplication.cpp:2976
#54 0x0000000000432d4a in main (argc=3, argv=<optimized out>) at /build/plasma-workspace-kxRFE_/plasma-workspace-5.5.5.2/shell/main.cpp:181

Reported using DrKonqi
Comment 1 David Edmundson 2016-08-11 15:53:23 UTC
Git commit e1f5e0304d104c0ce5c6ce74149b21b272b96a29 by David Edmundson.
Committed on 11/08/2016 at 15:52.
Pushed by davidedmundson into branch 'master'.

Lazy guard for KServiceGroup::root() being null.

Summary:
This will happen if KSycoca::ensureCacheValid fails. (which shouldn't
ever happen).
Hopefully it'll just call refresh later. In any case, we won't
crash.

Test Plan: None.

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2341

M  +3    -0    applets/kicker/plugin/appsmodel.cpp

http://commits.kde.org/plasma-desktop/e1f5e0304d104c0ce5c6ce74149b21b272b96a29