Lazy guard for KServiceGroup::root() being null.

Summary:
This will happen if KSycoca::ensureCacheValid fails. (which shouldn't
ever happen).
Hopefully it'll just call refresh later. In any case, we won't
crash.

BUG: 363339

Test Plan: None.

Reviewers: #plasma, mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2341